feat: add website scraper to company data

--- a/Website/dashboard.html
+++ b/Website/dashboard.html
@@ -50,6 +50,7 @@
 
     <script src="assets/js/dash.js"></script>
     <script src="assets/js/mail.js"></script>
+    <script src="assets/js/scraper.js"></script>
 
 </body>
 
