feat: add Config Json file generator

--- a/Website/dashboard.html
+++ b/Website/dashboard.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <h1>New Assistant</h1>
-        <button>Save</button>
+        <button type="submit" onclick="createConfigJson()">Save</button>
     </div>
 
     <div class="content">
@@ -51,6 +51,7 @@
     <script src="assets/js/dash.js"></script>
     <script src="assets/js/mail.js"></script>
     <script src="assets/js/scraper.js"></script>
+    <script src="assets/js/config.js"></script>
 
 </body>
 
