feat: add company info extractor for both scraper and uploaded file

--- a/Website/dashboard.html
+++ b/Website/dashboard.html
@@ -52,6 +52,7 @@
     <script src="assets/js/mail.js"></script>
     <script src="assets/js/scraper.js"></script>
     <script src="assets/js/config.js"></script>
+    <script src="assets/js/extracter.js"></script>
 
 </body>
 
