--- a/Website/dashboard.html
+++ b/Website/dashboard.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assistant Dashboard</title>
     <link rel="stylesheet" href="assets/css/dash.css">
-
 </head>
-
 <body>
     <div class="navbar">
         <h1>New Assistant</h1>
@@ -29,31 +26,141 @@
         </div>
 
         <!-- Tabs -->
-        <!-- Tabs -->
         <div class="tabs">
-            <div id="model" class="tab active">Model</div>
-            <div id="Transcriber" class="tab">Transcriber</div>
-            <div id="Voice" class="tab">Voice</div>
-            <div id="Functions" class="tab">Functions</div>
-            <div id="Data" class="tab">Data</div>
+            <div id="model" class="tab active" onclick="switchTab(this, 'modelContent')">Model</div>
+            <div id="transcriber" class="tab" onclick="switchTab(this, 'transcriberContent')">Transcriber</div>
+            <div id="voice" class="tab" onclick="switchTab(this, 'voiceContent')">Voice</div>
+            <div id="functions" class="tab" onclick="switchTab(this, 'functionsContent')">Functions</div>
+            <div id="data" class="tab" onclick="switchTab(this, 'dataContent')">Data</div>
         </div>
 
         <!-- Dynamic Section -->
-        <div class="section" id="contenaire"></div>
-
-        <!-- Buttons -->
-        <!-- <div class="buttons">
-            <button>Cancel</button>
-            <button>Save</button>
-        </div> -->
+        <div class="section" id="contenaire">
+            <div id="modelContent" class="tab-content active">
+                <h3>Model</h3>
+                <div class="form-group">
+                    <label for="callbotname">Callbot Name</label>
+                    <input type="text" id="callbotname" placeholder="Enter Callbot Name.">
+                </div>
+                <div class="form-group">
+                    <label for="welcomemessage">First Message</label>
+                    <input type="text" id="welcomemessage" placeholder="Enter the first message...">
+                </div>
+                <div class="form-group">
+                    <label for="systemPrompt">System Prompt</label>
+                    <textarea id="systemPrompt" rows="3" placeholder="Enter the system prompt..."></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="modelProvider">Provider</label>
+                    <select id="modelProvider">
+                        <option value="openai">OpenAI</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="modelType">Model</label>
+                    <select id="modelType">
+                        <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
+                        <option value="gpt-4">GPT-4</option>
+                    </select>
+                </div>
+                <div class="sliders">
+                    <div class="slider">
+                        <label for="temperature">Temperature</label>
+                        <input type="range" id="temperature" min="0" max="1" step="0.1" value="0.7">
+                    </div>
+                    <div class="slider">
+                        <label for="tokens">Max Tokens</label>
+                        <input type="range" id="tokens" min="100" max="1000" step="50" value="250">
+                    </div>
+                </div>
+            </div>
+            <div id="transcriberContent" class="tab-content">
+                <h3>Transcription</h3>
+                <div class="form-group">
+                    <label for="provider">Provider</label>
+                    <select id="provider">
+                        <option value="deepgram">Deepgram</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="language">Language</label>
+                    <input type="text" id="language" value="en" placeholder="Enter language...">
+                </div>
+                <div class="pro-tip">
+                    Pro tip: If you want to support both English and Spanish, you can set the language to multi and use ElevenLabs Turbo 2.5 in the Voice tab.
+                </div>
+                <div class="form-group">
+                    <label for="modelTranscriber">Model</label>
+                    <select id="modelTranscriber">
+                        <option value="nova2">Nova 2</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="toggle">
+                    <input type="checkbox" id="denoising" checked>
+                    <label for="denoising">Background Denoising Enabled</label>
+                </div>
+            </div>
+            <div id="voiceContent" class="tab-content">
+                <h3>Voice</h3>
+                <div class="form-group">
+                    <label for="voiceProvider">Provider</label>
+                    <select id="voiceProvider">
+                        <option value="elevenlabs">ElevenLabs</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="voice">Voice</label>
+                    <select id="voice">
+                        <option value="New York Man">New York Man</option>
+                        <option value="Wise Men">Wise Men</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+            </div>
+            <div id="functionsContent" class="tab-content">
+                <h3>Functions</h3>
+                <div class="form-group">
+                    <label for="toEmail">Company Email:</label>
+                    <input type="text" id="toEmail" placeholder="Enter Your Company Email">
+                </div>
+                <div class="form-group">
+                    <label for="ccEmail">Support Email:</label>
+                    <input type="text" id="ccEmail" placeholder="Enter Your Support Email">
+                </div>
+                <button type="submit" onclick="sendEmail()">Test Email</button>
+            </div>
+            <div id="dataContent" class="tab-content">
+                <h3>Data</h3>
+                <div class="form-group">
+                    <label for="company">Company Name:</label>
+                    <input type="text" id="company" placeholder="Enter Your Company Name">
+                </div>
+                <div class="form-group">
+                    <label for="companywebsite">Company WebSite URL:</label>
+                    <input type="text" id="companywebsite" placeholder="https://example.com">
+                    <button type="submit" onclick="scrapeWebsite()">Scrape Company data</button>
+                </div>
+                <div class="form-group">
+                    <label for="companydata">Company Data:</label>
+                    <textarea id="companydata" rows="5" placeholder="Or Enter it manually..."></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="companydatafile">Upload Company Data:</label>
+                    <input type="file" id="companydatafile" accept=".json,.txt,.csv">
+                    <button type="submit" onclick="extractCompanyInfoFromFile(document.getElementById('companydatafile').files[0])">Extract Company Info from File</button>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <script src="assets/js/dash.js"></script>
     <script src="assets/js/mail.js"></script>
     <script src="assets/js/scraper.js"></script>
     <script src="assets/js/config.js"></script>
     <script src="assets/js/extracter.js"></script>
-
+    <script src="assets/js/dash.js"></script>
 </body>
-
 </html>
