refactor: update website system prompt && feat: create Desktop app folder

--- a/Website/dashboard.html
+++ b/Website/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assistant Dashboard</title>
+    <title>IALLO Dashboard</title>
     <link rel="stylesheet" href="assets/css/dash.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
    
@@ -12,8 +12,8 @@
 
 <body>
     <div class="navbar">
-        <h1>New Assistant</h1>
-        <button type="submit" onclick="createConfigJson()">Save</button>
+        <h1>Create Your CallBot Now</h1>
+        <button type="submit" onclick="createConfigJson()">Create !</button>
     </div>
 
     <div class="content">
